CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(dlx VERSION 0.1.0)

SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 20)
INCLUDE_DIRECTORIES(include)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_LIBRARY(sudoku_link STATIC src/sudoku_link.cpp)


#SET(SRC_LIST src/main.cpp src/sudoku_link.cpp)
#ADD_EXECUTABLE(dlx ${SRC_LIST})
ADD_EXECUTABLE(dlx src/main.cpp)
TARGET_LINK_LIBRARIES(dlx sudoku_link)

INCLUDE(CTest)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
#ADD_TEST(NAME utest1 COMMAND Test)

SET(CPACK_PROJECT_NAME ${PROJECT_NAME})
SET(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
INCLUDE(CPack)